kubernetes/dashboard/dashboard.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aiops-dashboard
  namespace: aiops-system
  labels:
    app.kubernetes.io/name: aiops-dashboard
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: aiops-dashboard
  template:
    metadata:
      labels:
        app.kubernetes.io/name: aiops-dashboard
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 101 # nginx user
      containers:
        - name: dashboard
          securityContext:
            allowPrivilegeEscalation: false
            seccompProfile:
              type: RuntimeDefault
            capabilities:
              drop:
                - ALL
          image: zain75117/aiops-k8s-dashboard:2  # Replace with your frontend registry URI
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              name: http
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 256Mi
---
apiVersion: v1
kind: Service
metadata:
  name: aiops-dashboard-service
  namespace: aiops-system
  labels:
    app.kubernetes.io/name: aiops-dashboard
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: aiops-dashboard
  ports:
    - port: 80
      targetPort: 8080
      name: http
